--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -156,7 +156,7 @@
         <section class="board-container">
             <div class="register">
                 <div class="register-container">
-                    <button class="register-btn">등록</button>
+                    <button class="register-btn" disabled>등록</button>
                 </div>
             </div>
             <div class="photo" id="photo">
@@ -351,4 +351,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="../../static/js/community/free-create.js"></script>
 </html>
