--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -263,7 +263,7 @@
                             </div>
                             <div class="singUp-btn">
                                 <button class="singUp1">취소</button>
-                                <button class="singUp">등록</button>
+                                <button class="singUp" disabled>등록</button>
                             </div>
                         </div>
                         <!--  -->
@@ -584,4 +584,5 @@
      <!--  -->
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="../../static/js/community/free-detail.js"></script>
 </html>
