--- a/src/main/resources/templates/mypage/rice-list.html
+++ b/src/main/resources/templates/mypage/rice-list.html
@@ -100,7 +100,7 @@
                         <th>현재 공양미</th>
                         <th>충전/사용 공양미</th>
                         <th>결제시간</th>
-                        <th>충전/사용/후원받은 공양미 여부</th>
+                        <th>충전/사용/환전/후원받은 공양미 여부</th>
                     </tr>
                 </thead>
                 <tbody>
