--- a/src/main/resources/static/css/community/review-detail.css
+++ b/src/main/resources/static/css/community/review-detail.css
@@ -5,6 +5,13 @@ body{
     display: block;
 }
 
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+    width: 100%;
+}
+
 div {
     display: block;
 }
@@ -58,19 +65,21 @@ div {
     border: 0 solid #e5e7eb;
 }
 .main{
-    max-width: 500px;
-    min-height: 100vh;
-    margin-bottom: 24px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+.main-main{
+    flex-direction: column;
+    max-width: 720px;
+    min-width: 320px;
+    width: 100%;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     background-color: #fff;
-}
-.main-main{
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 .main-title{
     margin-bottom: 18px;
@@ -161,8 +170,6 @@ div {
     padding-top: 32px;
     border-top-width: 1px;
     margin-top: 24px;
-    margin-left: -16px;
-    margin-right: -16px;
     border-color: #f3f3f4;
 }
 .review-post{
@@ -174,7 +181,7 @@ div {
     padding: 0px;
 }
 .img-wrapper{
-    margin: 0px 0px 24px;
+    margin: 0 0 24px 0;
 }
 .review-user{
     padding-top: 32px;
@@ -328,22 +335,6 @@ button {
     fill: #fff;
     background-color: rgba(229, 104, 89, 0.83);
 }
-.singUp:disabled{
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 16px;
-    justify-content: center;
-    align-items: center;
-    height: 32px;
-    display: flex;
-    position: relative;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 16px;
-    color: #fff;
-    fill: #fff;
-    background-color: #c5c5c5;
-}
 .singUp{
     padding-left: 16px;
     padding-right: 16px;
@@ -358,7 +349,7 @@ button {
     line-height: 16px;
     color: #fff;
     fill: #fff;
-    background-color: rgba(229, 104, 89, 0.83);
+    background-color: #c5c5c5;
 }
 .singUp1{
     padding-left: 15px;
@@ -763,5 +754,79 @@ ul{
     height: 20px;
     color: #cccccd;
     fill: #cccccd;
+    display: block;
+}
+.comment-box-span:focus {
+    border-color: #742ddd;
+}
+.more{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 3%;
+}
+.more-btn{
+    padding-left: 15px;
+    padding-right: 15px;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    display: flex;
+    position: relative;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    border-color: rgba(0,0,0,.1);
+    color: #333334;
+    fill: #333334;
+    background-color: #fff;
+}
+.more-svg{
+    height: 16px;
+    margin-left: 4px;
+    color: #5b44ea;
+    fill: #5b44ea;
+    display: block;
+}
+.footer{
+    z-index: 2;
+    bottom: 0;
+    position: sticky;
+}
+.footer-container{
+    --tw-shadow: 0px -2px 20px rgba(0,0,0,.08);
+    --tw-shadow-colored: 0px -2px 20px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+    padding: 16px;
+    border-top-width: 1px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    background-color: #fff;
+}
+.footer-wrapper{
+    justify-content: space-between;
+    width: 720px;
+    display: flex;
+}
+.footer-btn{
+    align-items: center;
+    display: flex;
+    margin-left: 10px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #8a8a8b;
+    fill: #8a8a8b;
+}
+.footer-svg{
+    width: 24px;
+    height: 24px;
+    color: #b9b9bb;
+    fill: #b9b9bb;
     display: block;
 }
