--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -263,7 +263,7 @@
                             </div>
                             <div class="singUp-btn">
                                 <button class="singUp1">취소</button>
-                                <button class="singUp" disabled>등록</button>
+                                <button class="singUp">등록</button>
                             </div>
                         </div>
                         <!--  -->
@@ -577,12 +577,33 @@
                         </li>
                         <!--  -->
                     </ul>
+
+                    <!-- 더보기 -->
+                    <div class="more">
+                        <button class="more-btn" type="button">
+                            더보기
+                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="more-svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="m20.023 11.886-7 7a.9.9 0 0 1-1.273-1.273l4.827-4.827H5.15a.9.9 0 0 1 0-1.8h11.427L11.75 6.16a.9.9 0 1 1 1.273-1.273l7 7Z"></path>
+                            </svg>
+                        </button>
+                    </div>
                 </main>
             </div>
+            <footer class="footer">
+                <div class="footer-container">
+                    <div class="footer-wrapper">
+                        <div style="display: flex;">
+                            <button class="footer-btn">
+                                <svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" class="footer-svg"><path clip-rule="evenodd" d="M8.144 13.563v2l2.543-2h2.396a2.74 2.74 0 0 0 2.741-2.74V7.073a2.74 2.74 0 0 0-2.74-2.74h-6.01a2.74 2.74 0 0 0-2.74 2.74v4.012a2.477 2.477 0 0 0 2.477 2.477h1.333Zm-.104 3.778a.815.815 0 0 1-1.23-.702v-1.743A3.81 3.81 0 0 1 3 11.086V7.074A4.074 4.074 0 0 1 7.074 3h6.01a4.074 4.074 0 0 1 4.073 4.074v3.748a4.074 4.074 0 0 1-4.074 4.074h-1.935L8.04 17.341Z"></path><path d="M8.167 9a.667.667 0 1 1-1.334 0 .667.667 0 0 1 1.334 0ZM10.667 9a.667.667 0 1 1-1.334 0 .667.667 0 0 1 1.334 0ZM13.167 9a.667.667 0 1 1-1.334 0 .667.667 0 0 1 1.334 0Z"></path></svg>
+                                <span style="margin-left: 4px;">6</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
-     </div>
+    </div>
      <!--  -->
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script src="../../static/js/community/free-detail.js"></script>
 </html>
