--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -404,6 +404,15 @@
                             <!--  -->
                         </ul>
                         <!--  -->
+                        <div style="height: 24px;"></div>
+                        <div id="comment-btn">
+                            <button class="comment-btn">
+                                <div class="comment-text">
+                                    댓글 더 보기
+                                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="comment-svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3.27 8.42a1.076 1.076 0 0 1 1.587-.13L12 14.832l7.143-6.544a1.076 1.076 0 0 1 1.586.13 1.26 1.26 0 0 1-.122 1.696L12 18l-8.607-7.885A1.26 1.26 0 0 1 3.27 8.42Z"></path></svg>
+                                </div>
+                            </button>
+                        </div>
                     </div>
                     <div style="height: 40px;"></div>
                     <div class="border-line"></div>
@@ -604,6 +613,22 @@
         </div>
     </div>
      <!--  -->
+     <!-- 댓글 삭제 모달창 -->
+     <div>
+         <div class="modal">
+            <h4 class="modal-title">댓글 삭제</h4>
+            <div class="modal-content">댓글을 삭제하시겠습니다?</div>
+            <div class="modal-choce">
+                <div class="choce1">
+                    <button class="choce1-btn">취소</button>
+                </div>
+                <div class="choce2">
+                    <button class="choce2-btn">삭제</button>
+                </div>
+            </div>
+         </div>
+         <div class="modal-back"></div>
+     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 </html>
