--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -92,7 +92,7 @@
                 <div class="footer-link-customer">
                     <div class="footer-link-customer-title">고객지원</div>
                     <div class="footer-link-customer-date">평일 9:00 ~ 17:00 (12:00 ~14:00 제외)</div>
-                    <a href="#" class="footer-link-customer-channel-talk">텀블벅에 문의</a>
+                    <a href="#" class="footer-link-customer-channel-talk">심봉사 문의하기</a>
                 </div>
             </div>
             <div class="footer-company-wrapper">
