--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -76,35 +76,44 @@
                         </ul>
                         <div class="thumbnail-section" style="visibility: visible;">
                             <div class="view">
-                                <img src="https://happybean-phinf.pstatic.net/20230330_225/1680158582595xbmNe_JPEG/제목_없음-1_복사22모금.jpg?type=w720" style="cursor:pointer width:624 height=351" alt="루게릭병 환우 간병비 지원사업">
-                                <div class="div-sub-position">
-                                    <strong>루게릭병 환우 간병비 지원사업</strong>
-                                    <span class="back-g"></span>
-                                </div>
+                                <img id="expandedImg" src="" style="cursor:pointer; width:624 height=351" alt="루게릭병 환우 간병비 지원사업">
                             </div>
                             <div class="thumbnail-list">
-                                <a href="#" class="p-move prev">이전</a>
                                 <ul>
                                     <li class="on">
-                                        <a href="#">
-                                            <img src="https://happybean-phinf.pstatic.net/20230330_225/1680158582595xbmNe_JPEG/제목_없음-1_복사22모금.jpg?type=w720" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
-                                        </a>
+                                        <button href="#">
+                                            <img class="img-div" src="../../static/image/notice/rag_doll_tumbnail.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                        </button>
+                                    </li>
+                                    <li class="on">
+                                        <button href="#">
+                                            <img class="img-div" src="../../static/image/main/001.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                        </button>
+                                    </li>
+                                    <li class="on">
+                                        <button href="#">
+                                            <img class="img-div" src="../../static/image/main/002.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                        </button>
+                                    </li>
+                                    <li class="on">
+                                        <button href="#">
+                                            <img class="img-div" src="../../static/image/main/003.jpg" width="99" height="70" alt="루게릭병 환우 간병비 지원사업">
+                                        </button>
                                     </li>
                                 </ul>
-                                <a href="#" class="p-move next">다음</a>
                             </div>
                         </div>
-                        <div class="button-area">
+                        <!-- <div class="button-area">
                             <a href="#" class="button donate support-donate">후원하기</a>
                             <div class="sns-area">
                                 <div class="social-plugin-wrap" id="spiLayer" style="position:relative">
                                     <a href="#" id="spiButton2" class="naver-splugin" data-option="{baseElement:'spiButton2', layerPosition:'outside-bottom', align:'right', top:4, left:0, marginLeft:8, marginTop:10}" data-url="https://happybean.naver.com/donations/H000000189407" data-title="아빠의 간병을 위해, 엄마는 일을 정리했습니다" data-source-name="아빠의 간병을 위해, 엄마는 일을 정리했습니다" title="보내기" data-style="unity-v2" data-blog-source-form="2" splugin-id="165927493">
                                         <span class="naver-splugin-c"></span>
                                     </a>
-                                </div>
+                                </div> -->
                                 <!-- 소셜 플러그인 -->
-                            </div>
-                        </div>
+                           <!--  </div>
+                        </div> -->
                         <div class="action-area">
                             <ul class="tab-list">
                                 <li class="tab-item">
