--- a/src/main/resources/templates/admin/component/sidebar.html
+++ b/src/main/resources/templates/admin/component/sidebar.html
@@ -284,5 +284,6 @@
     </div>
   </section>
 </body>
-
+<script src="/static/js/admin/app.js"></script>
+<script src="/static/js/admin/events.js"></script>
 </html>
