--- a/src/main/resources/templates/funding/funding-topContent.html
+++ b/src/main/resources/templates/funding/funding-topContent.html
@@ -29,6 +29,11 @@
                             <span class="Item-span"></span>
                         </a>
                     </li>
+                    <li class="item-li fundingGift">
+                        <a class="" href="/templates/funding/funding-gift.html">선물 구성
+                            <span class="Item-span"></span>
+                        </a>
+                    </li>
                     <li class="item-li projectPlan">
                         <a class="" href="/templates/funding/funding-project-plan.html">프로젝트 계획
                             <span class="Item-span"></span>
