서현 반응형 및 기타 수정 커밋

--- a/src/main/resources/templates/community/free-board.html
+++ b/src/main/resources/templates/community/free-board.html
@@ -184,8 +184,8 @@
 
 
     <!-- 전체 div -->
-    <div style="background-color: #fff;">
-        <div class="header" style="background-color: #fff;">
+    <div style="min-height: 100%;">
+        <div class="header">
             <div class="header-container">
                 <span class="header-title">자유게시판</span>
             </div>
