--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -7,7 +7,6 @@
     <title>심봉사 | 활동 후기 상세페이지</title>
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/community/review-detail.css">
-    <link rel="stylesheet" href="../../static/js/community/free-detail.js">
     <link rel="stylesheet" href="../../static/css/main/header.css">
 </head>
 <body>
@@ -202,13 +201,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="link">
+                        <!-- <div class="link">
                             <div class="link-container">
                                 <button class="link-btn">
                                     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="link-svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M20 6a3 3 0 0 1-5.022 2.216l-5.01 3.34c.018.127.029.255.031.385l4.84 2.978a3 3 0 1 1-.83 1.838l-4.672-2.876a3 3 0 1 1-.315-4.098l5.01-3.34A3 3 0 1 1 20 6Z"></path></svg>
                                 </button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="review-contant">
                         <div class="review-post">
@@ -263,7 +262,7 @@
                             </div>
                             <div class="singUp-btn">
                                 <button class="singUp1">취소</button>
-                                <button class="singUp">등록</button>
+                                <button class="singUp" disabled>등록</button>
                             </div>
                         </div>
                         <!--  -->
@@ -617,7 +616,7 @@
      <div>
          <div class="modal">
             <h4 class="modal-title">댓글 삭제</h4>
-            <div class="modal-content">댓글을 삭제하시겠습니다?</div>
+            <div class="modal-content">댓글을 삭제하시겠습니까?</div>
             <div class="modal-choce">
                 <div class="choce1">
                     <button class="choce1-btn">취소</button>
@@ -631,4 +630,5 @@
      </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="../../static/js/community/free-detail.js"></script>
 </html>
