--- a/src/main/resources/static/css/community/free-create.css
+++ b/src/main/resources/static/css/community/free-create.css
@@ -1,10 +1,16 @@
 body{
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #323232;
-    text-align: left;
-    background-color: #fff;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    min-width: 320px;
+    font-family: 'SpoqaHanSans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    line-height: 1.7em;
+    color: rgba(0, 0, 0, 0.87);
+    height: 100%;
+    margin: 0;
+    line-height: inherit;
+    display: block;
 }
 
 *{
@@ -15,16 +21,23 @@ div{
     display: block;
 }
 .board{
-    max-width: 500px;
-    min-height: 100vh;
-    margin-bottom: 24px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+    transform-origin: 0px 0px;
+    word-break: break-all;
+}
+.board-container{
+    flex-direction: column;
+    max-width: 720px;
+    min-width: 320px;
+    width: 100%;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    margin-top: 15px;
-}
-.board-container{
-    display: block;
+    background-color: #fff;
 }
 .register{
     height: 3.5rem;
@@ -39,35 +52,11 @@ div{
     height: 100%;
     margin: auto;
 }
-.register-btn:disabled{
-    display: flex;
-    cursor: pointer;
-    box-shadow: inset 0 0 0 0 #d9dfeb;
-    background-color: #c5c5c5;
-    color: #fff;
-    text-shadow: none;
-    background-image: none;
-    font-size: .92857143rem;
-    display: inline-block;
-    min-height: 1em;
-    outline: 0;
-    border: none;
-    vertical-align: baseline;
-    padding: 0.92857143em 1.5em;
-    text-transform: none;
-    font-weight: 400;
-    line-height: 1em;
-    font-style: normal;
-    text-align: center;
-    border-radius: 0.28571429rem;
-    transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
-    transform-origin: 0px 0px;
-}
 .register-btn{
     display: flex;
     cursor: pointer;
     box-shadow: inset 0 0 0 0 #d9dfeb;
-    background-color: rgba(229, 104, 89, 0.83);
+    background-color: #c5c5c5;
     color: #fff;
     text-shadow: none;
     background-image: none;
