--- a/src/main/resources/static/css/community/free-detail.css
+++ b/src/main/resources/static/css/community/free-detail.css
@@ -335,7 +335,7 @@ button {
     fill: #fff;
     background-color: rgba(229, 104, 89, 0.83);
 }
-.singUp{
+.singUp:disabled{
     padding-left: 16px;
     padding-right: 16px;
     border-radius: 16px;
@@ -350,6 +350,22 @@ button {
     color: #fff;
     fill: #fff;
     background-color: #c5c5c5;
+}
+.singUp{
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 16px;
+    justify-content: center;
+    align-items: center;
+    height: 32px;
+    display: flex;
+    position: relative;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    color: #fff;
+    fill: #fff;
+    background-color: rgba(229, 104, 89, 0.83);
 }
 .singUp1{
     padding-left: 15px;
@@ -873,6 +889,7 @@ ul{
 
 /* 댓글 삭제 모달창 */
 .modal{
+    transform: translate(-50%, -50%);
     box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
     --tw-shadow: 0px 2px 8px rgba(0,0,0,.08);
     --tw-shadow-colored: 0px 2px 8px var(--tw-shadow-color);
@@ -897,10 +914,10 @@ ul{
 .modal-back{
     width: 100%;
     height: 100%;
+    position: fixed;
     z-index: 10;
     left: 0;
     top: 0;
-    position: fixed;
     background-color: rgba(0,0,0,.4);
 }
 .modal-title{
@@ -920,6 +937,7 @@ ul{
     line-height: 24px;
     color: #333334;
     fill: #333334;
+    margin-top: 3%;
 }
 .modal-choce{
     justify-content: space-between;
@@ -969,6 +987,6 @@ ul{
     fill: #fff;
     background-color: #1d1d1e;
 }
-.choce1-btn :hover{
-    background-color: #f3f3f4;
+.choce1 :hover{
+    background-color: #e6e6e7db;
 }
