--- a/src/main/resources/static/css/community/review-board.css
+++ b/src/main/resources/static/css/community/review-board.css
@@ -1,4 +1,4 @@
-.body{
+body{
     height: 100%;
     margin: 0;
     line-height: inherit;
@@ -70,16 +70,20 @@
     }
 }
 .header{
+    padding-top: 30px;
+    padding-left: 16px;
+    padding-right: 16px;
+    
     flex-direction: column;
-    max-width: 720px;
+    max-width: 500px;
     min-width: 350px;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
 }   
 .header-container{
     gap: 16px;
     display: flex;
-    justify-content: center;
 }
 
 @media (min-width: 768px){
@@ -91,6 +95,9 @@
 }
 
 .header-title{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 34px;
     color: #1d1d1e;
     fill: #1d1d1e;
 }
@@ -115,6 +122,7 @@
 }
 
 .categori-container{
+    margin-top: 1%;
     padding-bottom: 14px;
     border-bottom-width: 1px;
     justify-content: space-between;
