--- a/src/main/resources/templates/community/review-create.html
+++ b/src/main/resources/templates/community/review-create.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>활동 후기 작성하기</title>
     <link rel="stylesheet" href="../../static/css/community/review-create.css">
-    <link rel="stylesheet" href="../../static/js/community/free-create.js">
     <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/header.css">
     <link rel="stylesheet" href="../../static/css/main/footer.css">
@@ -156,7 +155,7 @@
         <section class="board-container">
             <div class="register">
                 <div class="register-container">
-                    <button class="register-btn">등록</button>
+                    <button class="register-btn" disabled>등록</button>
                 </div>
             </div>
             <div class="photo" id="photo">
@@ -351,4 +350,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="../../static/js/community/free-create.js"></script>
 </html>
